# FlappyOGL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  generate.ps1
cmake/: Package.appxmanifest
source/: App.cpp  MathHelper.h  OpenGLES.cpp  OpenGLES.h  OpenGLHelper.cpp  OpenGLHelper.h  SimpleRenderer.cpp  SimpleRenderer.h  SpriteRenderer.cpp  SpriteRenderer.h  TextureManager.cpp  TextureManager.h  angle.cpp  angle.h  pch.h
